[project]
name = "arca-api"
version = "0.1.0"
description = "Arca — Business Expense Tracking Platform API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]==2.1.0b1",
    "alembic==1.18.4",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
